--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket-chat-example",
+  "name": "remote-slide",
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
